--- a/0-pricing.html
+++ b/0-pricing.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="./holberton_school-icon/style.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>SmileSchool</title>
+    <script src="scripts.js"></script>
   </head>
   <body>
     <div class="task_p0">
@@ -161,96 +162,27 @@
         </div>
       </div>
     </div>
-    <!--carousel task_2-->
-    <div class="task_2">
-      <div><br /><br /></div>
-      <div
-        id="carouselExampleControls"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="crsl">
-              <div class="crsl_i_1">
-                <img
-                  class="per_son img_crsl"
-                  src="./images/profile_5.jpg"
-                  alt="First slide"
-                />
-              </div>
-              <div class="crsl_i_2">
-                <p>
-                  « Those tutorials are concise and go straight to the point. I
-                  can’t think of a better place to learn smiling. And it’s so
-                  fun!
-                </p>
-                <h3>Person Name</h3>
-                <p>weather presenter</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="crsl">
-              <div class="crsl_i_1">
-                <img
-                  class="per_son img_crsl"
-                  src="./images/profile_5.jpg"
-                  alt="Second slide"
-                />
-              </div>
-              <div class="crsl_i_2">
-                <p>
-                  « Those tutorials are concise and go straight to the point. I
-                  can’t think of a better place to learn smiling. And it’s so
-                  fun!
-                </p>
-                <h3>Person Name</h3>
-                <p>weather presenter</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="crsl">
-              <div class="crsl_i_1">
-                <img
-                  class="per_son img_crsl"
-                  src="./images/profile_5.jpg"
-                  alt="Third slide"
-                />
-              </div>
-              <div class="crsl_i_2">
-                <p>
-                  « Those tutorials are concise and go straight to the point. I
-                  can’t think of a better place to learn smiling. And it’s so
-                  fun!
-                </p>
-                <h3>Person Name</h3>
-                <p>weather presenter</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a
-          class="carousel-control-prev"
-          href="#carouselExampleControls"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a
-          class="carousel-control-next"
-          href="#carouselExampleControls"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
+<!--carousel task_2-->
+<div class="task_2">
+  <!-- QUOTES SECTION -->
+  <section class="quotes-section">
+     <div id="quotesCarouselControls" class="carousel slide container-md" data-ride="carousel" >
+         <div id="quotesCarouselInner" class="carousel-inner">
+           <div id="loaderDiv" class="loader"></div>
+         </div>
+         <a class="carousel-control-prev" href="#quotesCarouselControls" role="button" data-slide="prev">
+           <span class="holberton_school-icon-arrow_4 display-1" aria-hidden="true"></span>
+           <span class="sr-only">Previous</span>
+         </a>
+         <a class="carousel-control-next" href="#quotesCarouselControls" role="button" data-slide="next">
+           <span class="holberton_school-icon-arrow_3 display-1" aria-hidden="true"></span>
+           <span class="sr-only">Next</span>
+         </a>
+     </div>
+ </section>
+ <!-- QUOTES SECTION -->
+</div>
+
     <!--TASK_3-->
     <div class="container" style="color: #000000; margin-bottom: 5%">
       <div class="row justify-content-center">
